@@ -38,6 +38,7 @@ from email.header import Header as _Header
 from email.mime.text import MIMEText as _MIMEText
 from email.utils import formataddr as _formataddr
 from email.utils import parseaddr as _parseaddr
+import logging
 import mailbox as _mailbox
 from email.utils import getaddresses as _getaddresses
 import imaplib as _imaplib
@@ -360,12 +361,14 @@ def sendmail_send(recipient, message, config=None, section='DEFAULT'):
         p = _subprocess.Popen(
             sendmail + ['-F', sender_name, '-f', sender_addr, recipient],
             stdin=_subprocess.PIPE, stdout=_subprocess.PIPE,
-            stderr=_subprocess.PIPE)
-        stdout,stderr = p.communicate(message_bytes)
+            stderr=_subprocess.STDOUT)
+        stdout, _ = p.communicate(message_bytes)
         status = p.wait()
+        _LOG.debug(stdout.decode())
         if status:
-            raise _error.SendmailError(
-                status=status, stdout=stdout, stderr=stderr)
+            if _LOG.level > logging.DEBUG:
+                _LOG.error(stdout.decode())
+            raise _error.SendmailError(status=status)
     except Exception as e:
         raise _error.SendmailError() from e
 
