@@ -6,6 +6,7 @@ UNRELEASED
     * Fix verbose configuration setting
     * Upgraded to feedparser v6.0 (https://github.com/kurtmckee/feedparser/)
     * Drop support for Python 3.5
+    * Log sendmail output
 
 v3.12.2 (2020-08-31)
     * Fix bug `AttributeError: 'NoneType' object has no attribute 'close'` (#126)
